--- a/Linear_Models/Regression.Rmd
+++ b/Linear_Models/Regression.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Linear Regression on the Kaggle Dataset Medals Data Set"
+title: "Regression on the Kaggle Dataset Medals Data Set"
 author: "Sam Ofiaza"
 output:
   html_document:
@@ -10,6 +10,7 @@ output:
 The Kaggle Dataset Medals data set contains information on datasets including the medal it has received (if any) and how many votes, views, downloads, etc. it has.
 
 Credit to Niek van der Zwaag for the data set ([link](https://www.kaggle.com/datasets/niekvanderzwaag/kaggle-dataset-medals?select=dataset_medal_total.csv)).
+
 
 ### Linear Regression Overview
 
@@ -23,6 +24,9 @@ str(df)
 sapply(df, function(x) sum(is.na(x)==TRUE))
 ```
 
+
+#### Divide into 80/20 train/test
+
 ```{r}
 set.seed(1234)
 i <- sample(1:nrow(df), nrow(df)*0.8, replace=FALSE)
@@ -30,9 +34,15 @@ train <- df[i,]
 test <- df[-i,]
 ```
 
+
+#### Data Summary
+
 ```{r}
 str(df)
 ```
+
+
+#### Data Visualization
 
 ```{r}
 par(mfrow=c(3,1))
@@ -41,10 +51,13 @@ plot(train$Downloads, train$Votes, xlab="Downloads", ylab="Votes")
 ```
 
 
+#### Linear Model 1: Votes vs Views
+
 ```{r}
 lm1 <- lm(Votes~Views, data=train)
 summary(lm1)
 ```
+
 
 ### Model Summary Analysis
 
@@ -55,9 +68,13 @@ par(mfrow=c(2,2))
 plot(lm1)
 ```
 
+
 ### Residual Plots
 
 The Residuals vs Fitted plot seems to indicate linearity but there is a clear density on the left so it is possible that some improvement can be made with the model. The Normal Q-Q plot indicates a decently strong normal distribution with some variation at the ends. Data point 16851 seems to be an outlier. The Scale-Location plot does not indicate equal variance in the model as the points are not equally spread and the line is not exactly horizontal. The Residuals vs Leverage plot points out some influential data points that are seen as clearly outside the dotted grey lines, such as 11197, 2856, and 8523. If we excluded these points, the results will be significantly altered.
+
+
+#### Linear Model 2: Votes vs Views+Downloads
 
 ```{r}
 lm2 <- lm(Votes~Views+Downloads, data=train)
@@ -69,19 +86,27 @@ par(mfrow=c(2,2))
 plot(lm2)
 ```
 
+
+#### Linear Model 3: Votes vs Views*Downloads
+
 ```{r}
 lm3 <- lm(Votes~Views*Downloads, data=train)
 summary(lm3)
 ```
+
 
 ```{r}
 par(mfrow=c(2,2))
 plot(lm3)
 ```
 
+
 ### Comparing the 3 Models
 
 Model 1 with only Views as a predictor had an R-squared value of 0.7074. Model 2 with Views and Downloads as predictors had an R-squared value of 0.7492. Model 3 with Views, Downloads, and a possible interaction effect between Views and Downloads as predictors had an R-squared value of 0.7501. Given that all 3 models have the same miniscule p-value, Model 3 seems to be the best model based on its R-value.
+
+
+#### Calculated Metrics for each Linear Model
 
 ```{r}
 pred1 = predict(lm1, newdata=test)
